--- a/algebra.tex
+++ b/algebra.tex
@@ -1,4 +1,4 @@
-\documentclass[17pt]{extarticle}
+\documentclass[14pt]{extarticle}
 \title{Linear Algebra Notes}
 \author{Giacomo Ellero}
 
@@ -10,6 +10,7 @@
 \usepackage{commath}
 \usepackage{dirtytalk}
 \usepackage{parskip}
+\usepackage{mathrsfs}
 \usepackage[a4paper,margin=1.5cm]{geometry}
 
 \newcommand{\C}{\mathbb{C}}
@@ -17,7 +18,7 @@
 \newcommand{\F}{\mathbb{F}}
 \newcommand{\citeladr}[1]{
     \begin{quotation}
-        This references \say{Linear Algebra Done Right}, #1
+        This section references \say{Linear Algebra Done Right}, #1
     \end{quotation}
 }
 \newcommand{\innerprod}[1]{
@@ -25,6 +26,20 @@
 }
 \renewcommand{\Re}{\operatorname{Re}}
 \renewcommand{\Im}{\operatorname{Im}}
+
+\newenvironment{absolutelynopagebreak}
+  {\par\nobreak\vfil\penalty0\vfilneg
+   \vtop\bgroup}
+  {\par\xdef\tpd{\the\prevdepth}\egroup
+   \prevdepth=\tpd}
+
+\newenvironment{theorem}[1]{
+\begin{absolutelynopagebreak}
+\subsubsection{#1}
+}
+{
+\end{absolutelynopagebreak}
+}
 
 \begin{document}
 
@@ -40,164 +55,412 @@
 
 \citeladr{Chapter 6.A}
 
-\subsubsection{Definition of complex conjugate}
+\begin{theorem}{Definition of complex conjugate}
 
-Let $z \in \C$, then
+    Let $z \in \C$, then
 
-$$
-    \overline z = \overline{a + bi} = a - bi
-$$
+    $$
+        \overline z = \overline{a + bi} = a - bi
+    $$
 
-\subsubsection{Definition of complex absolute value}
+\end{theorem}
 
-Let $z \in \C$, then
+\begin{theorem}{Definition of complex absolute value}
 
-$$
-    |z| = \sqrt{a^2 + b^2}
-$$
+    Let $z \in \C$, then
 
-and
+    $$
+        |z| = \sqrt{a^2 + b^2}
+    $$
 
-$$
-    |z|^2 = z \overline z
-$$
+    and
+
+    $$
+        |z|^2 = z \overline z
+    $$
 
 
-\subsubsection{Definition of norm}
+\end{theorem}
 
-\citeladr{6.8}
+\begin{theorem}{Definition of norm}
 
-Let $v \in V$, then
+    \citeladr{6.8}
 
-$$
-    \norm v = \sqrt{\langle v, v \rangle}
-$$
+    Let $v \in V$, then
 
-\subsubsection{Definition of orthogonal}
+    $$
+        \norm v = \sqrt{\langle v, v \rangle}
+    $$
 
-\citeladr{6.11}
+\end{theorem}
 
-Two vectors $u, v$ are orthogonal if
+\begin{theorem}{Definition of orthogonal}
 
-$$
-    \langle v, u \rangle = 0
-$$
+    \citeladr{6.11}
 
-This is just a fancy way to say they are perpendicular since, for example, in $\R^2$, $\langle v, u \rangle = \norm v \norm u \cos \theta$.
+    Two vectors $u, v$ are orthogonal if
 
-\subsubsection{Pythagorean theorem}
+    $$
+        \langle v, u \rangle = 0
+    $$
 
-\citeladr{6.13}
+    This is just a fancy way to say they are perpendicular since, for example, in $\R^2$, $\langle v, u \rangle = \norm v \norm u \cos \theta$.
 
-Let $v, u \in V$ be orthogonal, then
+\end{theorem}
 
-$$
-    \norm{u+v}^2 = \norm u^2 + \norm v^2
-$$
+\begin{theorem}{Pythagorean theorem}
 
-\subsubsection{Orthogonal Decomposition}
+    \citeladr{6.13}
 
-\citeladr{6.14}
+    Let $v, u \in V$ be orthogonal, then
 
-Let $v, u \in V$ and $w = u - cv$ orthogonal to $v$.
+    $$
+        \norm{u+v}^2 = \norm u^2 + \norm v^2
+    $$
 
-We want to find $c \in \F$ and such that
+\end{theorem}
 
-$$
-    u = cv + w
-$$
+\begin{theorem}{Orthogonal Decomposition}
 
-To solve this problem we set
+    \citeladr{6.14}
 
-$$
-    c = \frac{\langle u, v \rangle}{\norm v^2},
-    \quad
-    w = u - \frac{\langle u, v \rangle}{\norm v^2} v
-$$
+    Let $v, u \in V$ and $w = u - cv$ orthogonal to $v$.
 
-In this way we have that $u = cv + w$ and $\langle v, w \rangle = 0$
+    We want to find $c \in \F$ and such that
 
-\subsubsection{Cauchy-Schwarz Inequality}
+    $$
+        u = cv + w
+    $$
 
-\citeladr{6.15}
+    To solve this problem we set
 
-Let $u, v \in V$. Then
+    $$
+        c = \frac{\langle u, v \rangle}{\norm v^2},
+        \quad
+        w = u - \frac{\langle u, v \rangle}{\norm v^2} v
+    $$
 
-$$
-    |\langle u, v \rangle \le \norm u \norm v
-$$
+    In this way we have that $u = cv + w$ and $\langle v, w \rangle = 0$
 
-\begin{proof}
-    Consider the orthogonal decomposition $u = cv + w$.
-    Since $cv$ is orthogonal to $w$, by the Pythagorean Theorem we have that
+\end{theorem}
+
+\begin{theorem}{Cauchy-Schwarz Inequality}
+
+    \citeladr{6.15}
+
+    Let $u, v \in V$. Then
+
+    $$
+        |\langle u, v \rangle \le \norm u \norm v
+    $$
+
+    \begin{proof}
+        Consider the orthogonal decomposition $u = cv + w$.
+        Since $cv$ is orthogonal to $w$, by the Pythagorean Theorem we have that
+
+        \begin{align*}
+            \norm u ^2 & = \norm {c v}^2 + \norm w^2                                                 \\
+                       & = \norm {\frac{\langle u, v \rangle}{\norm v^2} v}^2 + \norm w^2            \\
+                       & = \left(\frac{\langle u, v \rangle}{\norm v^2} \norm v\right)^2 + \norm w^2 \\
+                       & = \frac{|\langle u, v \rangle |^2}{\norm v^2} + \norm w^2                   \\
+                       & \ge \frac{|\langle u, v \rangle |^2}{\norm v^2}                             \\
+        \end{align*}
+
+        Now we take square roots on both sides and rearrange the terms to get our result.
+
+    \end{proof}
+
+\end{theorem}
+
+\begin{theorem}{Triangle Inequality}
+
+    \citeladr{6.18}
+
+    Let $u, v \in V$. Then
+
+    $$
+        \norm{u+v} \le \norm u + \norm v
+    $$
+
+    \begin{proof}
+        \begin{align*}
+            \norm{u+v}^2 & = \innerprod{u+v, u+v}                                                                 \\
+                         & = \innerprod{u, u} + \innerprod{v,v} + \innerprod{u, v} + \innerprod{v, u}             \\
+                         & = \innerprod{u, u} + \innerprod{v,v} + \innerprod{u, v} + \overline {\innerprod{u, v}} \\
+                         & = \norm u^2 + \norm v^2 + 2 \Re \innerprod{u, v}                                       \\
+                         & \le \norm u^2 + \norm v^2 + 2|\innerprod{u, v}|                                        \\
+                         & \le \norm u^2 + \norm v^2 + 2 \norm u \norm v                                          \\
+                         & = (\norm u + \norm v)^2
+        \end{align*}
+    \end{proof}
+
+\end{theorem}
+
+\begin{theorem}{Parallelogram Equality}
+
+    \citeladr{6.22}
+
+    Let $u, v \in V$. Then
+
+    $$
+        \norm {u+v}^2 + \norm{u-v}^2 = 2 (\norm u^2 + \norm v^2)
+    $$
+
+    This is quite easy to prove just with the definition of norm and inner product.
+
+    \clearpage
+
+    \subsection{Orthonormal Bases}
+
+    \citeladr{Chapter 6.B}
+
+\end{theorem}
+
+\begin{theorem}{Definition of Orthonormal List}
+
+    \citeladr{6.23}
+
+    A list of vectors is orthonormal if
+    each vector has norm 1 and
+    is orthogonal to the other vectors in the list.
+
+    This means that in an orthonormal list $e_1, \dots, e_n$ of vectors in $V$
+
+    $$
+        \innerprod{e_i, e_j} = \begin{cases*}
+            1  \text{ if } j = k, \\
+            0  \text{ if } j \ne k
+        \end{cases*}
+    $$
+
+    From now on when we usually denote an orthonormal lists of vectors with $e_i$.
+
+\end{theorem}
+
+\begin{theorem}{Norm of an orthonormal linear combination}
+
+    \citeladr{6.25}
+
+    Let $e_1, \dots, e_n$ orthonormal. Then
+
+    $$
+        \norm{a_1 e_1 + \dots + a_n e_n} = |a_1|^2 + \dots + |a_n|^2
+    $$
+
+    for all $a_1, \dots, a_n \in \F$.
+
+    \begin{proof}
+        This is just the repeated application of the Pythagorean Theorem.
+    \end{proof}
+\end{theorem}
+
+\begin{theorem}{Definition of Orthonormal Basis}
+
+    \citeladr{6.26, 6.27 and 6.28}
+
+    As a corollary of the previous theorem we have that \textbf{every orthonormal list of vectors is linearly indipendent}.
+    This is quite obvious from the previous theorem.
+
+    It follows that if we have an orthonormal list of the right length we can form a basis.
+    Such basis will be referred as an \textbf{orthonormal basis}.
+\end{theorem}
+
+\begin{theorem}{Writing a Vector as a L.C. of Orthonormal Basis}
+
+    \citeladr{6.30}
+
+    Let $e_1, \dots, e_n$ be an orthonormal basis of $V$ and $v \in V$.
+    Then
+
+    $$
+        v = \innerprod{v, e_1}e_1 + \dots + \innerprod{v, e_n}e_n
+    $$
+
+    and
+
+    $$
+        \norm v^2 = |\innerprod{v, e_1}| + \dots + |\innerprod{v, e_n}|
+    $$
+
+\end{theorem}
+
+\begin{theorem}{Gram-Schmidt Procedure}
+
+    \citeladr{6.31}
+
+    This is a procedure for finding orthonormal basis of a given vector space.
+
+    Let $v_1, \dots, v_n$ be a basis of $V$.
+    Define by induction the list $e_1, \dots, e_n$ such that for $i = 1$ we have that
 
     \begin{align*}
-        \norm u ^2 & = \norm {c v}^2 + \norm w^2                                                 \\
-                   & = \norm {\frac{\langle u, v \rangle}{\norm v^2} v}^2 + \norm w^2            \\
-                   & = \left(\frac{\langle u, v \rangle}{\norm v^2} \norm v\right)^2 + \norm w^2 \\
-                   & = \frac{|\langle u, v \rangle |^2}{\norm v^2} + \norm w^2                   \\
-                   & \ge \frac{|\langle u, v \rangle |^2}{\norm v^2}                             \\
+        v_1' & = v_1                   \\
+        e_1  & = \frac{v_1}{\norm v_1} \\
     \end{align*}
 
-    Now we take square roots on both sides and rearrange the terms to get our result.
+    $\forall i \ge 2$ we define
 
-\end{proof}
-
-\subsubsection{Triangle Inequality}
-
-\citeladr{6.18}
-
-Let $u, v \in V$. Then
-
-$$
-    \norm{u+v} \le \norm u + \norm v
-$$
-
-\begin{proof}
     \begin{align*}
-        \norm{u+v}^2 & = \innerprod{u+v, u+v}                                                                 \\
-                     & = \innerprod{u, u} + \innerprod{v,v} + \innerprod{u, v} + \innerprod{v, u}             \\
-                     & = \innerprod{u, u} + \innerprod{v,v} + \innerprod{u, v} + \overline {\innerprod{u, v}} \\
-                     & = \norm u^2 + \norm v^2 + 2 \Re \innerprod{u, v}                                       \\
-                     & \le \norm u^2 + \norm v^2 + 2|\innerprod{u, v}|                                        \\
-                     & \le \norm u^2 + \norm v^2 + 2 \norm u \norm v                                          \\
-                     & = (\norm u + \norm v)^2
+        v_i' & = v_i - \innerprod{v_i, e_1}e_1 - \dots - \innerprod{v_i, e_{j-1}}e_{j-1} \\
+        e_i  & = \frac{v_i'}{\norm {v_i'}}                                               \\
     \end{align*}
-\end{proof}
 
-\subsubsection{Parallelogram Equality}
+\end{theorem}
 
-\citeladr{6.22}
+\begin{theorem}{Riesz Representation Theorem}
+    \citeladr{6.42}
 
-Let $u, v \in V$. Then
+    Let $V$ be finete-dimensional and $\varphi: V \to \F$.
+    Then there exists an unique $u \in V$ such that
 
-$$
-    \norm {u+v}^2 + \norm{u-v}^2 = 2 (\norm u^2 + \norm v^2)
-$$
+    $$
+        \forall v \in V, \quad \varphi(v) = \innerprod{v, u}
+    $$
 
-This is quite easy to prove just with the definition of norm and inner product.
+    This gives an isomorphism between $V' = \mathscr L(V, \F)$ and $V$.
+\end{theorem}
 
 \clearpage
 
-\subsection{Orthonormal Bases}
+\subsection{Orthogonal Complements}
 
 \citeladr{Chapter 6.B}
 
-\subsubsection{Definition of Orthonormal List}
+\begin{theorem}{Definition of Orthogonal Complement}
+    \citeladr{6.45}
 
-\citeladr{6.23}
+    Let $U \subset V$ (not necessarily a subspace).
+    Then we denote as $U^\perp$ the \textbf{orthogonal complement} of $U$
+    the set of all vectors in $V$ orthogonal to every vector in $U$.
 
-A list of vectors is orthonormal if
-each vector has norm 1 and
-is orthogonal to the other vectors in the list.
+    $$
+        U^\perp = \{ v \in V \enspace | \enspace \forall u \in U, \innerprod{v, u} = 0 \}
+    $$
 
-This means that in an orthonormal list $x_1, \dots, x_n$ of vectors in $V$
+\end{theorem}
 
-$$
-    \innerprod{x_i, x_j} = \begin{cases*}
-        1  \text{ if } j = k, \\
-        0  \text{ if } j \ne k
-    \end{cases*}
-$$
+\begin{theorem}{Proprieties of the Orthogonal Complement}
+
+    \citeladr{6.46, 6.47, and 6.48}
+
+    Applying the Riesz theorem we get an isomorphism between $U^\perp$ and $U^\circ$.
+
+    The following proprieties hold:
+
+    \begin{enumerate}
+        \item $U^\perp$ is a linear subspace of $V$
+        \item $\{\underline 0\}^\perp = V$
+        \item $V^\perp = \{\underline 0\}$
+        \item $U \cap U^\perp$ is either $\{\underline 0\}$ or $\varnothing$
+        \item If $U \subseteq W$, then $W^\perp \subseteq U^\perp$
+    \end{enumerate}
+
+    Also it holds that
+
+    $$
+        V = U \oplus U^\perp
+    $$
+
+    Moreover, if $V$ is finite-dimensional we get that
+
+    $$
+        \dim U^\perp = \dim V + \dim U
+    $$
+
+
+\end{theorem}
+
+\clearpage
+
+\section{Operators on Inner Product Spaces}
+
+\citeladr{Chapter 7}
+
+\subsection{Self-Adjoint and Normal Operators}
+
+\citeladr{Chapter 7.A}
+
+\begin{theorem}{Definition of Self-Adjoint Mapping}
+
+    \citeladr{7.11}
+
+    A linear mapping $T \in \mathscr L(V)$ is self-adjoint if and only if
+
+    $$
+        \forall v, w \in V, \quad \innerprod{Tv, w} = \innerprod{v, Tw}
+    $$
+\end{theorem}
+
+\begin{theorem}{Transpose and Conjugate of Self-Adjoint Mapping}
+
+    \citeladr{7.10 (chopped)}
+
+    Let $V$ be finite-dimensional, $T$ be a self-adjoint mapping on $V$,
+    and $\mathscr B = (e_1, \dots, e_n)$ be an orthogonal basis of $V$.
+
+    Then the matrix $A$ of $T$ relative to $\mathscr B$ has the following propriety
+
+    $$
+        A' = \overline A
+    $$
+
+    (The transpose of $A$ is its conjugate.)
+
+\end{theorem}
+
+\begin{theorem}{Transpose of the Product of Matrices}
+
+    \begin{quote}
+        This section references the slides of week 11 and is not contained in this chapter of "Linear Algebra Done Right".
+
+        This is a quite general result that will be useful for other proofs even though it's not strictly part of this topic.
+    \end{quote}
+
+    Let $A \in \mathscr M_{m,n}(F)$ and $B \in \mathscr M_{n, p}(F)$ such that $AB$ is defined. Then
+
+    $$
+        (AB)' = B'A'
+    $$
+
+\end{theorem}
+
+\subsection{The Spectral Theorem}
+
+\citeladr{Chapter 7.B}
+
+\begin{theorem}{Eigenvalues of Self-Adjoint Mapping are Real}
+    Let $T$ be a self-adjoint mapping on $V$.
+    Then all the eigenvalues of $T$ are real.
+
+    In other words if a matrix $A$ is such that $A' = \overline A$,
+    then $P_A$ (characteristical polynomial) has all roots in $\R$.
+\end{theorem}
+
+\begin{theorem}{The Spectral Theorem}
+    \citeladr{7.24 and 7.29}
+
+    Let $V$ be finite-dimensional and $T$ be a self-adjoint mapping on $V$.
+    Then there exists an orthonormal basis of $V$ consisting of eigevectors of $T$.
+
+    Moreover if $\F = \R$ this is an equivalence (if and only if).
+
+    \begin{proof}
+        Let $\lambda$ be an eigenvalue of $T$ and $u$ its eigenvalue.
+        We can find another eigenvector of $T$ $u_n = \frac{u}{\norm u}$.
+        Let $U = [u_n]$ (the span of $u_n$) and $U^\perp$ which will have $\dim U^\perp = n-1$.
+
+        We also have that
+
+        $$
+            \innerprod{Tv, u_n} \stackrel{\text{self-adjoint}}{=}
+            \innerprod{v, Tu_n} \stackrel{\text{eigenvector}}{=}
+            \innerprod{v, \lambda u_n} \stackrel{\text{semi-linearity}}{=}
+            \overline \lambda \innerprod{v, u_n} \stackrel{\text{orthognality of } U^\perp}{=}
+            0
+        $$
+
+        % TODO: finish here
+    \end{proof}
+\end{theorem}
 
 \end{document}
