--- a/algebra.tex
+++ b/algebra.tex
@@ -258,7 +258,7 @@
 
     \citeladr{6.26, 6.27 and 6.28}
 
-    As a corollary of the previous theorem we have that \textbf{every orthonormal list of vectors is linearly indipendent}.
+    As a corollary of the previous theorem we have that \textbf{every orthonormal list of vectors is linearly independent}.
     This is quite obvious from the previous theorem.
 
     It follows that if we have an orthonormal list of the right length we can form a basis.
@@ -310,7 +310,7 @@
 \begin{theorem}{Riesz Representation Theorem}
     \citeladr{6.42}
 
-    Let $V$ be finete-dimensional and $\varphi: V \to \F$.
+    Let $V$ be finite-dimensional and $\varphi: V \to \F$.
     Then there exists an unique $u \in V$ such that
 
     $$
@@ -433,7 +433,7 @@
     Then all the eigenvalues of $T$ are real.
 
     In other words if a matrix $A$ is such that $A' = \overline A$,
-    then $P_A$ (characteristical polynomial) has all roots in $\R$.
+    then $P_A$ (characteristic polynomial) has all roots in $\R$.
 \end{theorem}
 
 \begin{theorem}{The Spectral Theorem}
